--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -46,24 +46,31 @@
 
         <h2> Projects</h2>
         <div class="row">
+            <div class="projects-col" style="background-image: url('../images/tsc1.png')">
+                <div class="project-name">Turtles All The Way Down</div>
+                <a href="../pages/works.html#turtle"><div class="project-description">
+                    <p><br>Turtle snowboarding game, featuring wrap around space. Follow old trails and create new ones inline to collecting all the gems.</p>
+                </div></a>
+            </div>
+
             <div class="projects-col" style="background-image: url('../images/dogy_4.png')">
                 <div class="project-name">Dodgy Dice</div>
-                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
+                <a href="../pages/works.html#dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
-                
+
             </div>
             <div class="projects-col" style="background-image: url('../images/body.gif')">
                 <div class="project-name">Where is My Body</div>
-                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
+                <a href="../pages/works.html#body"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/Dreamchaser.png')">
                 <div class="project-name">DreamChaser</div>
-                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
+                <a href="../pages/works.html#dream"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
@@ -77,35 +84,37 @@
             </div>
             <div class="projects-col" style="background-image: url('../images/whale.jpg')">
                 <div class="project-name">Killer Whale</div>
-                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
+                <a href="../pages/works.html#whale"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/hex.png')">
                 <div class="project-name">Hex Harmonia</div>
-                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
+                <a href="../pages/works.html#hex"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
+        </div>
         <h2>Designs</h2>
         <div class="row">
             <div class="projects-col" style="background-image: url('../images/hat.png')">
                 <div class="project-name">Ace Attorney Game Poster</div>
-                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
+                <a href="../pages/works.html#poster"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/Aboutart 1.png')">
                 <div class="project-name">Aboutart UI Design</div>
-                <a href="https://chonkershq.itch.io/dodgy-dice"><div class="project-description">
+                <a href="../pages/works.html#aboutArt"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
-            </div>
+            </div> 
         </div>
+
 
 
     </section>
