--- a/pages/works.html
+++ b/pages/works.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="../css/works.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>My Works</title>
 </head>
@@ -29,7 +32,7 @@
     <section class="projects">
         <h4> Game Projects</h4>
         <div class="work-description">
-            <h1>Hex Harmonia
+            <h1><a id = "hex"></a>Hex Harmonia
                 <a href="https://gun-jumpers.itch.io/hex-harmonia" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/GunJumpers/JamOne'"style="cursor:pointer" title="source code"></i>
             </h1> 
@@ -37,7 +40,7 @@
             <li>CMPM 170: Game Design Studio Jam One project </li>
             <h3>HexHarmonia - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/l4d3-rslow8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>Hex Harmonia</b></h2>
+            <h2>My contribution to <i>Hex Harmonia</i></h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
@@ -50,36 +53,35 @@
         </div>
 
         <div class="work-description">
-            <h1>Turtles All The Way Down
+            <h1><a id = "turtle"></a>Turtles All The Way Down
                 <a href="https://niccoloabate.itch.io/turtles-all-the-way-down" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/NikThomas9/CMPM170-Jam-2'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> Novemeber 2022</p>
             <li>CMPM 170: Game Design Studio Jam Two project </li>
             <h3>Turtles All The Way Down - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/l4d3-rslow8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>Hex Harmonia</b></h2>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/rPg4BJFoqzs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <i>Turtles All The Way Down</i></h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
             <ul><div class="screenshots">
-                <img src="../images/hsc1.jpg">
-                <img src="../images/hsc2.jpg">
-                <img src="../images/hsc3.jpg">
-                <img src="../images/hsc4.png">
+                <img src="../images/tsc2.png">
+                <img src="../images/tsc3.png">
+                <img src="../images/tsc4.png">
             </div></ul>
         </div>
 
         <div class="work-description">
-            <h1>Dodgy Dice
+            <h1><a id = "dice"></a>Dodgy Dice
                 <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/metalgaiden/DodgeRoll'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> July 2022</p>
-            <li>GMTK 2O22 GAME JAM projects </li>
+            <li>GMTK 2022 GAME JAM projects </li>
             <h3>Dodgy Dice - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/eswdmvGHW6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>Dodgy Dice</b></h2>
+            <h2>My contribution to <i>Dodgy Dice</i></h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
@@ -92,7 +94,7 @@
             </div></ul>
         </div>
         <div class="work-description">
-            <h1>Where is My Body?
+            <h1><a id = "body"></a>Where is My Body?
                 <a href="https://yiyang-lu.itch.io/where-is-my-body" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/WhereIsMyBody'"style="cursor:pointer" title="source code"></i>
             </h1> 
@@ -100,7 +102,7 @@
             <li>CMPM 120: Game Development Experience project </li>
             <h3>Where is My Body? - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>Where is My Body</b></h2>
+            <h2>My contribution to <i>Where is My Body</i></h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
@@ -111,14 +113,15 @@
             </div></ul>
         </div>
         <div class="work-description">
-            <h1>DreamChaser<a href="https://twixyuu.itch.io/dreamchaser" class="btn_2"> Play Now</a>
+            <h1><a id = "dream"></a>DreamChaser
+                <a href="https://twixyuu.itch.io/dreamchaser" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/Dreamchaser'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> April 2022 ~ June 2022</p>
             <li>CMPM 120: Game Development Experience project </li>
             <h3>DreamChaser - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>DreamChaser</b></h2>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/jPh8JDKGbb4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <i>DreamChaser</i></h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
@@ -130,14 +133,15 @@
         </div>
 
         <div class="work-description">
-            <h1>Ace Attorney Shooting<a href="https://yiyang-lu.itch.io/ace-attorney-shooting" class="btn_2"> Play Now</a>
+            <h1><a id = "shoot"></a>Ace Attorney Shooting
+                <a href="https://yiyang-lu.itch.io/ace-attorney-shooting" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/RocketPatrol_Mod'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> April 2022</p>
             <li>CMPM 120: Game Development Experience project</li>
             <h3>Ace Attorney Shooting - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>Ace Attorney Shooting</b></h2>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/kaH5_7Eo80U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>Individual Project</h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
@@ -149,10 +153,29 @@
             </div></ul>
         </div>
         <div class="work-description">
-            <h1>Killer Whale <a href="https://yiyang-lu.itch.io/twine-game-killer-whale" class="btn_2"> Play Now</a></h1> 
+            <h1><a id = "whale"></a>Killer Whale 
+                <a href="https://yiyang-lu.itch.io/twine-game-killer-whale" class="btn_2"> Play Now</a></h1> 
             <p> April 2021 ~ May 2021</p>
             <li>CMPM 80K: Foundations of Video Game Design project </li>
             <h3>Killer Whale - Full Walkthrough</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/41NFFk6Zds4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>Individual Project</h2>
+            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
+            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
+            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <ul><div class="screenshots">
+                <img src="../images/kw1.png">
+                <img src="../images/kw2.png">
+                <img src="../images/kw3.png">
+            </div></ul>
+        </div>
+        <h4>Designs</h4>
+        <div class="work-description">
+            <h1><a id = "poster"></a>Ace Attorney Interactive Poster
+                <a href="https://yiyang-lu.itch.io/ace-attorney-game-poster" class="btn_2"> Play Now</a></h1> 
+            <p> September 2021 ~ December 2021</p>
+            <li>ARTG 80I: Visual Communication and Interaction Design project</li>
+            <h3>Ace Attorney Interactive Poster Overview</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>Individual Project</h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
@@ -164,40 +187,23 @@
                 <img src="../images/dcsc3.png">
             </div></ul>
         </div>
-        <h4>Designs</h4>
         <div class="work-description">
-            <h1>Ace Attorney Interactive Poster<a href="https://yiyang-lu.itch.io/ace-attorney-game-poster" class="btn_2"> Play Now</a></h1> 
-            <p> September 2021 ~ December 2021</p>
-            <li>ARTG 80I: Human-Centerd Design Research project</li>
-            <h3>About Art Overview</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>Ace Attorney Shooting</b></h2>
-            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
-            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
-            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
-            <ul><div class="screenshots">
-                <img src="../images/dcsc1.png">
-                <img src="../images/dcsc2.png">
-                <img src="../images/dcsc3.png">
-            </div></ul>
-        </div>
-        <div class="work-description">
-            <h1>About Art UI Design<a href="https://yiyang-lu.itch.io/ace-attorney-shooting" class="btn_2"> Play Now</a>
-                <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/RocketPatrol_Mod'"style="cursor:pointer" title="source code"></i>
+            <h1><a id = "aboutArt"></a>About Art UI Design
+                <a href="https://www.figma.com/file/G80j1tcjhGEUskc4rBBRPE/Team-16-Fully-Interactive-Prototype?node-id=0%3A1&t=38YEXPOxBotvqHuR-1" class="btn_2"> View Prototype</a>
             </h1> 
             <p> September 2021 ~ December 2021</p>
             <li>CMPM 178: Human-Centerd Design Research project</li>
+            <ul><div class="screenshots">
+                <img src="../images/Aboutart 1.png">
+                <img src="../images/Aboutart2.png">
+                <img src="../images/Aboutart 3.png">
+            </div></ul>
             <h3>About Art Overview</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h2>My contribution to <b>Ace Attorney Shooting</b></h2>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/kSSkhDMbyRQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>My contribution to <i>About Art Prototype</i></h2>
             <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
-            <ul><div class="screenshots">
-                <img src="../images/dcsc1.png">
-                <img src="../images/dcsc2.png">
-                <img src="../images/dcsc3.png">
-            </div></ul>
         </div>
     </section>
 </body>
