--- a/pages/works.html
+++ b/pages/works.html
@@ -37,19 +37,23 @@
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/GunJumpers/JamOne'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> October 2022</p>
-            <li>CMPM 170: Game Design Studio Jam One project </li>
+            <li><b>CMPM 170: Game Design Studio I</b> Jam One project </li>
             <h3>HexHarmonia - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/l4d3-rslow8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>My contribution to <i>Hex Harmonia</i></h2>
-            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
-            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
-            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <li>Worked with a team of 9 developers in CMPM 170 to create a 3D puzzle game.</li>
+            <li>Used Unity, C#, and GitHub throughout the development.</li>
+            <li>Developed scripted game events of two puzzle rooms and 3D player controller.</li>
+            <li>Designed and implemented one puzzle room (raccoon rhythm puzzle room).</li>
+            <li>Coordianted with sound artists during developing to make sure we were at the same page.</li>
             <ul><div class="screenshots">
                 <img src="../images/hsc1.jpg">
                 <img src="../images/hsc2.jpg">
                 <img src="../images/hsc3.jpg">
                 <img src="../images/hsc4.png">
             </div></ul>
+            <h2>Design Details</h2>
+            <p><a href="https://docs.google.com/presentation/d/1MdtTKm_kEejC5-dENBHoSK-WHHb_aEeLbEA8JtSirbc/edit?usp=sharing">Design Slides</a></p>
         </div>
 
         <div class="work-description">
@@ -58,18 +62,21 @@
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/NikThomas9/CMPM170-Jam-2'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> Novemeber 2022</p>
-            <li>CMPM 170: Game Design Studio Jam Two project </li>
+            <li><b>CMPM 170: Game Design Studio I</b> Jam Two project </li>
             <h3>Turtles All The Way Down - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/rPg4BJFoqzs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>My contribution to <i>Turtles All The Way Down</i></h2>
-            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
-            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
-            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <li>Teamed with 7 people to create a 3D Snowboarding game.  </li>
+            <li>Responsible for Endless Scene Wrapping, UI, Camera Following and Player Controller.</li>
+            <li>Imported assets and checked them have correct materials && textures.</li>
             <ul><div class="screenshots">
                 <img src="../images/tsc2.png">
                 <img src="../images/tsc3.png">
                 <img src="../images/tsc4.png">
             </div></ul>
+            <h2>Design Details</h2>
+            <p><a href="https://docs.google.com/presentation/d/1YwHZuAYty16D_h2eqSXJ7v1FRCIXaZYAzd0YC5o2bbo/edit?usp=sharing">Design Slides</a></p>
+            <p><a href="https://docs.google.com/document/d/1Kfp4RMN9OmJQuDPga68RMkNMyxkN6juhE3Si8fvFOXc/edit?usp=sharing">Design Docs</a></p>     
         </div>
 
         <div class="work-description">
@@ -78,7 +85,7 @@
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/metalgaiden/DodgeRoll'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> July 2022</p>
-            <li>GMTK 2022 GAME JAM projects </li>
+            <li><b>GMTK 2022 GAME JAM</b> projects </li>
             <h3>Dodgy Dice - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/eswdmvGHW6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>My contribution to <i>Dodgy Dice</i></h2>
@@ -99,13 +106,13 @@
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/WhereIsMyBody'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> March 2022 ~ April 2022</p>
-            <li>CMPM 120: Game Development Experience project </li>
+            <li><b>CMPM 120: Game Development Experience</b> project </li>
             <h3>Where is My Body? - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>My contribution to <i>Where is My Body</i></h2>
-            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
-            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
-            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <li>Teamed with three people and developed a 2D endless runner game.</li>
+            <li>Designed game mechanics after communicating with teammates.</li>
+            <li>Developed random platforms generating and the endless game scene.</li>
             <ul><div class="screenshots">
                 <img src="../images/wbsc_1.png">
                 <img src="../images/wbsc_2.png">
@@ -118,13 +125,14 @@
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/Dreamchaser'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> April 2022 ~ June 2022</p>
-            <li>CMPM 120: Game Development Experience project </li>
+            <li><b>CMPM 120: Game Development Experience</b> project </li>
             <h3>DreamChaser - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/jPh8JDKGbb4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>My contribution to <i>DreamChaser</i></h2>
-            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
-            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
-            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <li>Collaborated with three programmers in CMPM 120 to create a 2D platformer game.</li>
+            <li>Coordinated with everyone to keep track of project progress.</li>
+            <li>Used Phaser 3, JavaScript, and HTML throughout the project. </li>
+            <li>Responsible for 2D player controller, UI, particle effects, scene transition and level design (level 2). </li>
             <ul><div class="screenshots">
                 <img src="../images/dcsc1.png">
                 <img src="../images/dcsc2.png">
@@ -138,13 +146,14 @@
                 <i class="fa fa-github" onclick ="location.href = 'https://github.com/lyiyang0702/RocketPatrol_Mod'"style="cursor:pointer" title="source code"></i>
             </h1> 
             <p> April 2022</p>
-            <li>CMPM 120: Game Development Experience project</li>
+            <li><b>CMPM 120: Game Development Experience</b> project</li>
             <h3>Ace Attorney Shooting - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/kaH5_7Eo80U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>Individual Project</h2>
-            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
-            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
-            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <li>Modified from <a href="https://www.uvlist.net/game-161706-Rocket+Patrol">Rocket Patrol (1978)</a></li>
+            <li>Used Phaser 3, JavaScript and HTML.</li>
+            <li>Made poster and subsituted original art with new pixel arts (credit:https://milesandphoenix.tumblr.com/). </li>
+            <li>Added new level, two player mode and changed characters moving direction. </li>
             <ul><div class="screenshots">
                 <img src="../images/acs4.png">
                 <img src="../images/acs3.png">
@@ -156,13 +165,12 @@
             <h1><a id = "whale"></a>Killer Whale 
                 <a href="https://yiyang-lu.itch.io/twine-game-killer-whale" class="btn_2"> Play Now</a></h1> 
             <p> April 2021 ~ May 2021</p>
-            <li>CMPM 80K: Foundations of Video Game Design project </li>
+            <li><b>CMPM 80K: Foundations of Video Game Design</b> project </li>
             <h3>Killer Whale - Full Walkthrough</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/41NFFk6Zds4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>Individual Project</h2>
-            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
-            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
-            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <li>Wrote the whole story and designed narrations.</li>
+            <li>Used Twine to add Interactions.</li>
             <ul><div class="screenshots">
                 <img src="../images/kw1.png">
                 <img src="../images/kw2.png">
@@ -174,25 +182,24 @@
             <h1><a id = "poster"></a>Ace Attorney Interactive Poster
                 <a href="https://yiyang-lu.itch.io/ace-attorney-game-poster" class="btn_2"> Play Now</a></h1> 
             <p> September 2021 ~ December 2021</p>
-            <li>ARTG 80I: Visual Communication and Interaction Design project</li>
+            <li><b>ARTG 80G: Visual Communication and Interaction Design</b> project</li>
             <h3>Ace Attorney Interactive Poster Overview</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/wp9snBJZ1MQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>Individual Project</h2>
-            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
-            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
-            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <li>Designed cover, narrations and interations.</li>
+            <li>Used Twine, HTML and CSS.</li>
             <ul><div class="screenshots">
-                <img src="../images/dcsc1.png">
-                <img src="../images/dcsc2.png">
-                <img src="../images/dcsc3.png">
+                <img src="../images/psc1.png">
+                <img src="../images/psc2.png">
+                <img src="../images/psc3.png">
+                <img src="../images/psc4.png">
             </div></ul>
         </div>
         <div class="work-description">
             <h1><a id = "aboutArt"></a>About Art UI Design
-                <a href="https://www.figma.com/file/G80j1tcjhGEUskc4rBBRPE/Team-16-Fully-Interactive-Prototype?node-id=0%3A1&t=38YEXPOxBotvqHuR-1" class="btn_2"> View Prototype</a>
             </h1> 
             <p> September 2021 ~ December 2021</p>
-            <li>CMPM 178: Human-Centerd Design Research project</li>
+            <li><b>CMPM 178: Human-Centerd Design Research</b> project</li>
             <ul><div class="screenshots">
                 <img src="../images/Aboutart 1.png">
                 <img src="../images/Aboutart2.png">
@@ -201,9 +208,11 @@
             <h3>About Art Overview</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/kSSkhDMbyRQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>My contribution to <i>About Art Prototype</i></h2>
-            <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group memebers.</li>
-            <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
-            <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
+            <li>Collaborated with 3 other students in CMPM 178 to create a product for local nonprofit art organization.</li>
+            <li>Used Figma Prototype features.</li>
+            <li>Desigend UI to fulfill the reqirements collected from users (through Interview)</li>
+            <h2>Design Details</h2>
+            <p><a href="https://www.figma.com/file/G80j1tcjhGEUskc4rBBRPE/Team-16-Fully-Interactive-Prototype?node-id=0%3A1&t=38YEXPOxBotvqHuR-1">Figma File</a></p>
         </div>
     </section>
 </body>
