--- a/pages/cv.html
+++ b/pages/cv.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="../css/works.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
-    <link rel="stylesheet" href="../css/cv.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>My Works</title>
 </head>
 <body>
     <section class="header">
@@ -17,15 +17,20 @@
             <img src="../images/avatar.png" width="120" height="120">
             <img src="../images/name.gif" width="200" height="200">
             <div class="nav-links" id="navLinks">
+                <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="../pages/index.html"> HOME </a></li>
                     <li><a href="../pages/about.html"> ABOUT </a></li>
-                    <li><a href="#work"> WORKS </a></li>
+                    <li><a href="../pages/works.html"> WORKS </a></li>
                     <li><a href="../pages/cv.html"> CV/Résumé </a></li>
                 </ul>
             </div>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <div class="text-box">
-        </div>
+    </section>
+
+    <section class="projects">
+        <h1>Yiyang Lu</h1>
+    </section>
 </body>
 </html>
