--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="../pages/index.html"> HOME </a></li>
-                    <li><a href="../pages/about.html"> ABOUT </a></li>
-                    <li><a href="../pages/works.html"> WORKS </a></li>
-                    <li><a href="../pages/cv.html"> CV/Résumé </a></li>
+                    <li><a href="index.html"> HOME </a></li>
+                    <li><a href="about.html"> ABOUT </a></li>
+                    <li><a href="works.html"> WORKS </a></li>
+                    <li><a href="cv.html"> CV/Résumé </a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -48,14 +48,14 @@
         <div class="row">
             <div class="projects-col" style="background-image: url('../images/tsc1.png')">
                 <div class="project-name">Turtles All The Way Down</div>
-                <a href="../pages/works.html#turtle"><div class="project-description">
+                <a href="works.html#turtle"><div class="project-description">
                     <p><br>Turtle snowboarding game, featuring wrap around space. Follow old trails and create new ones inline to collecting all the gems.</p>
                 </div></a>
             </div>
 
             <div class="projects-col" style="background-image: url('../images/dogy_4.png')">
                 <div class="project-name">Dodgy Dice</div>
-                <a href="../pages/works.html#dice"><div class="project-description">
+                <a href="works.html#dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
@@ -63,28 +63,28 @@
             </div>
             <div class="projects-col" style="background-image: url('../images/body.gif')">
                 <div class="project-name">Where is My Body</div>
-                <a href="../pages/works.html#body"><div class="project-description">
+                <a href="works.html#body"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/Dreamchaser.png')">
                 <div class="project-name">DreamChaser</div>
-                <a href="../pages/works.html#dream"><div class="project-description">
+                <a href="works.html#dream"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/whale.jpg')">
                 <div class="project-name">Killer Whale</div>
-                <a href="../pages/works.html#whale"><div class="project-description">
+                <a href="works.html#whale"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/hex.png')">
                 <div class="project-name">Hex Harmonia</div>
-                <a href="../pages/works.html#hex"><div class="project-description">
+                <a href="works.html#hex"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
@@ -94,14 +94,14 @@
         <div class="row">
             <div class="projects-col" style="background-image: url('../images/hat.png')">
                 <div class="project-name">Ace Attorney Game Poster</div>
-                <a href="../pages/works.html#poster"><div class="project-description">
+                <a href="works.html#poster"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('../images/Aboutart 1.png')">
                 <div class="project-name">Aboutart UI Design</div>
-                <a href="../pages/works.html#aboutArt"><div class="project-description">
+                <a href="works.html#aboutArt"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
