--- a/works.html
+++ b/works.html
@@ -19,10 +19,10 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="../pages/index.html"> HOME </a></li>
-                    <li><a href="../pages/about.html"> ABOUT </a></li>
-                    <li><a href="../pages/works.html"> WORKS </a></li>
-                    <li><a href="../pages/cv.html"> CV/Résumé </a></li>
+                    <li><a href="index.html"> HOME </a></li>
+                    <li><a href="about.html"> ABOUT </a></li>
+                    <li><a href="works.html"> WORKS </a></li>
+                    <li><a href="cv.html"> CV/Résumé </a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
