--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yiyang Lu's Website</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
@@ -15,8 +15,8 @@
 <body>
     <section class="header">
         <nav>
-            <img src="../images/avatar.png" width="120" height="120">
-            <img src="../images/name.gif" width="200" height="200">
+            <img src="images/avatar.png" width="120" height="120">
+            <img src="images/name.gif" width="200" height="200">
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
